--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "dev": "NODE_ENV=development node .",
     "build": "npm-run-all --parallel build:server build:client",
     "build:client": "next build client",
-    "build:server": "lb-tsc es2017 --outDir server/dist -p server",
+    "build:server": "lb-tsc --project ./server",
     "start": "node .",
     "heroku-postbuild": "npm run build"
   }
