--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "author": "Nahuel H. Alvarez",
   "license": "Apache-2.0",
   "dependencies": {
-    "@loopback/boot": "^1.0.6",
-    "@loopback/context": "^1.2.0",
-    "@loopback/core": "^1.1.1",
-    "@loopback/openapi-v3": "^1.1.3",
-    "@loopback/repository": "^1.0.6",
-    "@loopback/rest": "^1.4.0",
-    "@loopback/rest-explorer": "^1.1.2",
-    "@loopback/service-proxy": "^1.0.3",
+    "@loopback/boot": "^2.3.2",
+    "@loopback/context": "^3.8.2",
+    "@loopback/core": "^2.7.1",
+    "@loopback/openapi-v3": "^3.4.2",
+    "@loopback/repository": "^2.6.0",
+    "@loopback/rest": "^5.1.0",
+    "@loopback/rest-explorer": "^2.2.3",
+    "@loopback/service-proxy": "^2.3.1",
+    "tslib": "^2.0.0",
     "express": "^4.16.4",
     "next": "^9.3.6",
     "npm-run-all": "^4.1.5",
@@ -21,9 +22,18 @@
     "react-dom": "^16.6.3"
   },
   "devDependencies": {
-    "@loopback/build": "^5.3.1",
-    "@loopback/testlab": "^1.0.1",
-    "@types/node": "^10.11.2"
+    "@loopback/build": "^5.4.2",
+    "source-map-support": "^0.5.19",
+    "@loopback/testlab": "^3.1.6",
+    "@types/node": "^10.17.24",
+    "@typescript-eslint/parser": "^2.31.0",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@loopback/eslint-config": "^8.0.0",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-eslint-plugin": "^2.2.1",
+    "eslint-plugin-mocha": "^7.0.0",
+    "typescript": "~3.9.3"
   },
   "scripts": {
     "dev": "NODE_ENV=development node .",
